<resources>
    <string name="app_name">Stack iLearning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login/Register Strings -->
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register_with_facebook">Register with Facebook</string>

    <string name="choice1">Choice 1</string>
    <string name="choice2">Choice 2</string>
    <string name="choice3">Choice 3</string>
    <string name="choice4">Choice 4</string>
    <string name="fullname">Full Name</string>
    <string name="address">Address</string>


    <!-- Dashboard Strings -->

    <string-array name="word_list">
        <item>apple</item>
        <item>banana</item>
        <item>cherry</item>
    </string-array>

    <plurals name="attempts_left">
        <item quantity="one">%d attempt left</item>
        <item quantity="other">%d attempts left</item>
    </plurals>
</resources>