<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_stacktrek2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/input_background"
        android:hint="@string/email"
        android:fontFamily="@font/spiegel_cd_regular"
        app:startIconDrawable="@drawable/baseline_account_circle_24"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@color/textInputLayoutBackground"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/black"
        app:hintTextColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spiegel_cd_regular"
        android:maxLines="1"
        android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/email"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/input_background"
        android:hint="@string/password"
        android:fontFamily="@font/spiegel_cd_regular"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@color/textInputLayoutBackground"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/black"
        app:hintTextColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spiegel_cd_regular"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_register"
        android:fontFamily="@font/spiegel_cd_regular"
        android:textColor="#000000"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_orange"
        android:text="@string/login"
        android:fontFamily="@font/spiegel_semi_bold"
        android:textColor="#FFFFFF"
        android:textSize="18sp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loginSuccess"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        app:lottie_rawRes="@raw/login_authenticate"
        app:lottie_loop="false"
        app:lottie_autoPlay="true"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
